Fix page height on mobile. Fix keyboard focus on mobile.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,4 @@
 :root {
+    --app-height: 100vh;
     --sidebar-active: var(--secondary-background);
 }
